Refactor ExceptionReporterIntegrationTest and ExtractCallReceiverTest to utilize @TempDir for improved file handling
- Updated ExceptionReporterIntegrationTest to use a temporary directory for mock project initialization, enhancing test isolation.
- Refactored ExtractCallReceiverTest to initialize TestProject with @TempDir, ensuring efficient file handling and avoiding unnecessary system temp tree scans.
- Introduced a new TestProjectGetAllFilesTest to validate behavior when using the system temp directory and caching mechanisms in TestProject.