@@ -20,7 +20,6 @@ import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
@@ -52,6 +51,10 @@ public class TestProject implements IProject {
     private @Nullable IGitRepo repo;
     private @Nullable Supplier<Set<ProjectFile>> allFilesSupplier;
     private @Nullable Set<ProjectFile> allFiles;
+
+    /** Cached result of the intrinsic {@link Files#walk} when not using {@link #withAllFiles} or {@link #withAllFilesSupplier}. */
+    private volatile @Nullable Set<ProjectFile> walkedFilesCache;
+
     private Set<ProjectFile> allOnDiskDependencies = Set.of();
     private Set<IProject.Dependency> liveDependencies = Set.of();
     private @Nullable Predicate<Path> gitignoredPredicate;
@@ -134,12 +137,14 @@ public class TestProject implements IProject {
     public TestProject withAllFilesSupplier(Supplier<Set<ProjectFile>> filesSupplier) {
         this.allFilesSupplier = filesSupplier;
         this.allFiles = null;
+        this.walkedFilesCache = null;
         return this;
     }
 
     public TestProject withAllFiles(Set<ProjectFile> files) {
         this.allFiles = Set.copyOf(files);
         this.allFilesSupplier = null;
+        this.walkedFilesCache = null;
         return this;
     }
 
@@ -284,6 +289,30 @@ public class TestProject implements IProject {
         return getRoot();
     }
 
+    /**
+     * True when {@code root} is the JVM system temp directory (not merely a subdirectory under it). Walking that path
+     * would scan the entire temp tree; {@link #getAllFiles} throws in that case unless files are supplied via
+     * {@link #withAllFiles} or {@link #withAllFilesSupplier}.
+     */
+    private static boolean isBareSystemTempDirectory(Path root) {
+        Path tmp =
+                Path.of(System.getProperty("java.io.tmpdir")).toAbsolutePath().normalize();
+        Path r = root.toAbsolutePath().normalize();
+        if (r.equals(tmp)) {
+            return true;
+        }
+        try {
+            return Files.exists(r) && Files.exists(tmp) && Files.isSameFile(r, tmp);
+        } catch (IOException e) {
+            return false;
+        }
+    }
+
+    @Override
+    public void invalidateAllFiles() {
+        walkedFilesCache = null;
+    }
+
     @Override
     public Set<ProjectFile> getAllFiles() {
         if (allFilesSupplier != null) {
@@ -292,10 +321,22 @@ public class TestProject implements IProject {
         if (allFiles != null) {
             return allFiles;
         }
+        Set<ProjectFile> cached = walkedFilesCache;
+        if (cached != null) {
+            return cached;
+        }
+        if (isBareSystemTempDirectory(root)) {
+            throw new IllegalStateException(
+                    "TestProject root must not be the JVM system temp directory (java.io.tmpdir); that would scan the "
+                            + "entire temp tree. Use a dedicated directory, for example JUnit 5 @TempDir, or supply "
+                            + "files with withAllFiles(...) / withAllFilesSupplier(...).");
+        }
         try (Stream<Path> stream = Files.walk(root)) {
-            return stream.filter(p -> Files.isRegularFile(p))
+            Set<ProjectFile> walked = stream.filter(p -> Files.isRegularFile(p))
                     .map(p -> new ProjectFile(root, root.relativize(p)))
                     .collect(Collectors.toSet());
+            walkedFilesCache = Set.copyOf(walked);
+            return walkedFilesCache;
         } catch (IOException | UncheckedIOException e) {
             System.err.printf("ERROR (TestProject.getAllFiles): walk failed on %s: %s%n", root, e.getMessage());
             // NoSuchFileException can occur directly (from Files.walk) or wrapped in UncheckedIOException (from stream
@@ -304,7 +345,8 @@ public class TestProject implements IProject {
             if (!(cause instanceof NoSuchFileException)) {
                 e.printStackTrace(System.err);
             }
-            return Collections.emptySet();
+            walkedFilesCache = Set.of();
+            return walkedFilesCache;
         }
     }
 
